# libgameaudio

./: CMakeLists.txt  README.md
docs/: Doxyfile  MAINPAGE.md
docs/html/: dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_defs.html  globals_func.html  group__audio__formats.html  group__audio__types.html  group__hints.html  group__parameters.html  group__quantifiers.html  index.html  lga_8h.html  lga_8h_source.html  libgameaudio_8h.html  libgameaudio_8h_source.html  modules.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  defines_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  searchdata.js
include/: libgameaudio.h
src/: libgameaudio.c  track.c  track.h
test/: play_bgm.c
